--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,27 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/TwinStickExampleMap.TwinStickExampleMap
+GameDefaultMap=/Game/TwinStickExampleMap.TwinStickExampleMap
+TransitionMap=None
+ServerDefaultMap=/Game/TwinStickExampleMap.TwinStickExampleMap
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=((Crosshairs, /Game/Art/Textures/Cursor/BP_Crosshair_Widget.BP_Crosshair_Widget_C))
+DefaultCursor=None
+TextEditBeamCursor=None
+CrosshairsCursor=None
+HandCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000))),ExternalCurve=None)
+bLoadWidgetsOnDedicatedServer=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -49,22 +70,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=NavigationOnly
-HardwareCursors=()
-SoftwareCursors=((Crosshairs, /Game/Art/Textures/Cursor/BP_Crosshair_Widget.BP_Crosshair_Widget_C))
-DefaultCursor=None
-TextEditBeamCursor=None
-CrosshairsCursor=None
-HandCursor=None
-GrabHandCursor=None
-GrabHandClosedCursor=None
-SlashedCircleCursor=None
-ApplicationScale=1.000000
-UIScaleRule=ShortestSide
-CustomScalingRuleClass=None
-UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000))),ExternalCurve=None)
-bLoadWidgetsOnDedicatedServer=True
-
-
